[tool.poetry]
name = "pyconjp2021-locust"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
