[tool.poetry]
name = "pyconjp2021-locust"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.2.3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
boto3 = "^1.18.60"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
